Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118391 tst_qmlls: enable tests in CI
  3. QTBUG-118425

fix and re-enable tst_qmlls_utils rangeFormatting

    XMLWordPrintable

Details

    • 2df631f5e (dev), e210a8976 (6.7)

    Description

      The test do not work on windows and therefore got an QEXPECT_FAIL in https://codereview.qt-project.org/c/qt/qtdeclarative/+/512981/

      The range formatting tests should also be tested on windows. Remove the QEXPECT_FAIL and fix the failure reason.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              semih.yavuz Semih Yavuz
              sami.shalayel Sami Shalayel
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes