Fix rangeFormatting tests

lineEndings in LineEndingsOption had a default value to Unix line
endings. Add a preprocessor flag that changes it into Windows line
endings if the host environment is Windows.

Add except_fail tests back. Also open the files in non-text mode for
proper line ending testing.

Pick-to: 6.7
Fixes: QTBUG-118425
Change-Id: Ie80376adb14ae72db7465da7f629a5e3db38cd97
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>